--- a/PPLQR-App/app/src/main/res/layout/activity_qrscanner.xml
+++ b/PPLQR-App/app/src/main/res/layout/activity_qrscanner.xml
@@ -33,8 +33,8 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:layout_height="200dp"
+                app:srcCompat="@drawable/qroutline" />
         </LinearLayout>
 
         <LinearLayout
