--- a/PPLQR-App/app/src/main/res/layout/activity_results.xml
+++ b/PPLQR-App/app/src/main/res/layout/activity_results.xml
@@ -20,13 +20,24 @@
             android:id="@+id/code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="30dp"
             android:text="TextView"
+            android:textAlignment="center"
             android:textSize="30sp" />
+
+        <ImageView
+            android:id="@+id/productImage"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/noimage" />
 
         <Button
             android:id="@+id/tempbtn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="New Scan" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
