--- a/PPLQR-App/app/src/main/res/layout/activity_splash_screen.xml
+++ b/PPLQR-App/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/ppllogo" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
