--- a/PPLQR-App/app/src/main/res/drawable/qroutline.xml
+++ b/PPLQR-App/app/src/main/res/drawable/qroutline.xml
@@ -6,8 +6,8 @@
     android:viewportWidth="100"
     android:viewportHeight="100">
     <path
-        android:strokeWidth="5"
-        android:pathData="M0,0 L100,0 L100,100 L0, 100 L0,0"
+        android:strokeWidth="3"
+        android:pathData="M0,0 L20,0 M80,0 L100,0 L100,20 M100,80 L100,100 L80, 100 M20,100 L0,100 L0,80 M0,20  L0,0"
         android:strokeColor="#ffffff">
 
     </path>
