--- a/PPLQR-App/app/src/main/res/layout/activity_results.xml
+++ b/PPLQR-App/app/src/main/res/layout/activity_results.xml
@@ -23,14 +23,16 @@
             android:padding="30dp"
             android:text="TextView"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/productImage"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/noimage" />
+            app:srcCompat="@drawable/noimage"
+            android:layout_marginBottom="15dp"/>
 
         <Button
             android:id="@+id/tempbtn"
